<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view_create_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"

        >


        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.24"
            app:layout_constraintHeight_percent="0.12"
            android:layout_margin="19.65dp"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintStart_toStartOf="@id/guide_left"
            app:layout_constraintTop_toTopOf="@id/guide_top" />

        <View
            android:id="@+id/shadow_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/round_image_picker"
            app:layout_constraintBottom_toBottomOf="@id/profile_picture"
            app:layout_constraintEnd_toEndOf="@id/profile_picture"
            app:layout_constraintStart_toStartOf="@id/profile_picture"
            app:layout_constraintTop_toTopOf="@id/profile_picture"

            />

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.08"
            android:src="@drawable/image_card_icon"
            app:layout_constraintBottom_toBottomOf="@id/profile_picture"
            app:layout_constraintEnd_toEndOf="@id/profile_picture"
            app:layout_constraintStart_toStartOf="@id/profile_picture"
            app:layout_constraintTop_toTopOf="@id/profile_picture" />


        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.5"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/man_user"
            android:hint="@string/name_edit_string"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/profile_picture"
            app:layout_constraintTop_toTopOf="@id/guide_top" />

        <EditText
            android:id="@+id/phone_edit_text"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.5"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/call_answer"
            android:hint="@string/phone_edit_string"
            android:inputType="phone"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/profile_picture"
            app:layout_constraintTop_toBottomOf="@id/name_edit_text"

            />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.5"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/mail"
            android:hint="@string/email_edit_string"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/profile_picture"
            app:layout_constraintTop_toBottomOf="@id/phone_edit_text"
            />

        <EditText
            android:id="@+id/company_edit_text"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.8"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:background="@color/transparent"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/factory"
            android:hint="@string/company_edit_string"
            android:inputType="text"
            android:textColorHint="#555"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@id/guide_far_right"
            app:layout_constraintStart_toStartOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/email_edit_text"

            />

        <View
            android:id="@+id/profession_line_view"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"

            android:background="#002fff"
            app:layout_constraintEnd_toStartOf="@id/guide_far_right"
            app:layout_constraintStart_toStartOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/profession_edit_text" />

        <View
            android:id="@+id/company_line_view"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"

            android:background="#002fff"
            app:layout_constraintEnd_toStartOf="@id/guide_far_right"
            app:layout_constraintStart_toStartOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/company_edit_text" />

        <EditText
            android:id="@+id/profession_edit_text"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.8"
            android:layout_height="match_parent"
            android:layout_marginTop="17.5dp"
            android:background="@color/transparent"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/briefcase"
            android:hint="@string/profession_edit_string"
            android:inputType="text"
            android:textColorHint="#555"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@id/guide_far_right"
            app:layout_constraintStart_toStartOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/company_line_view"

            />


        <com.google.android.gms.maps.MapView
            android:id="@+id/map_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.53"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profession_line_view"


            />

        <EditText
            android:id="@+id/address_search_edit"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.95"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#FFF"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/location"
            android:elevation="5dp"
            android:hint="Enter Address, City, or Zip Code"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/map_view"

            />

        <!--
        <fragment android:id="@+id/google_maps"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="0dp"
            android:layout_height="300dp"


            app:layout_constraintBottom_toTopOf="@id/buttonLoadPicture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profession_edit_box"

            />

-->

        <android.support.constraint.Guideline
            android:id="@+id/guide_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05"
            />

        <android.support.constraint.Guideline
            android:id="@+id/guide_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05"/>

        <android.support.constraint.Guideline
            android:id="@+id/guide_far_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.93"
            />


    </android.support.constraint.ConstraintLayout>
</ScrollView>